--- a/package.json
+++ b/package.json
@@ -8,20 +8,28 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "deploy": "cdk deploy  --require-approval never",
+    "dev": "IS_LOCAL=true ts-node src/lambda/handler/index.ts"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.116.0",
+    "@types/aws-lambda": "^8.10.81",
+    "@types/express": "^4.17.13",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "aws-cdk": "1.116.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.116.0",
-    "ts-node": "^9.0.0",
+    "ts-node": "^10.1.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.116.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.116.0",
     "@aws-cdk/core": "1.116.0",
+    "@vendia/serverless-express": "^4.3.9",
+    "express": "^4.17.1",
     "source-map-support": "^0.5.16"
   }
 }
