--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.116.0",
+    "@aws-cdk/aws-dynamodb": "^1.116.0",
     "@aws-cdk/aws-lambda-nodejs": "^1.116.0",
     "@aws-cdk/core": "1.116.0",
     "@vendia/serverless-express": "^4.3.9",
