--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "@types/uuid": "^8.3.1",
     "aws-cdk": "1.116.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
@@ -32,6 +33,8 @@
     "@vendia/serverless-express": "^4.3.9",
     "aws-sdk": "^2.958.0",
     "express": "^4.17.1",
-    "source-map-support": "^0.5.16"
+    "express-validator": "^6.12.1",
+    "source-map-support": "^0.5.16",
+    "uuid": "^8.3.2"
   }
 }
