--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@aws-cdk/aws-dynamodb": "^1.116.0",
     "@aws-cdk/aws-lambda-nodejs": "^1.116.0",
     "@aws-cdk/core": "1.116.0",
+    "@aws-sdk/client-dynamodb": "^3.24.0",
+    "@aws-sdk/lib-dynamodb": "^3.24.0",
+    "@aws-sdk/util-dynamodb": "^3.24.0",
     "@vendia/serverless-express": "^4.3.9",
-    "aws-sdk": "^2.958.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "source-map-support": "^0.5.16",
