--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vendia/serverless-express": "^4.3.9",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
+    "morgan": "^1.10.0",
     "source-map-support": "^0.5.16",
     "uuid": "^8.3.2"
   }
