--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "10.17.27",
     "@types/uuid": "^8.3.1",
     "aws-cdk": "1.116.0",
+    "aws-sdk-client-mock": "^0.5.3",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^10.1.0",
