--- a/.github/workflows/cdk.yml
+++ b/.github/workflows/cdk.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: "14.x"
 
       - name: Setup dependencies
-        run: yarn ci
+        run: yarn --frozen-lockfile
 
       - name: Build
         run: yarn run build
