--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/node": "16.6.1",
+    "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.1",
     "aws-cdk": "1.118.0",
     "aws-sdk-client-mock": "^0.5.3",
     "jest": "^27.0.6",
+    "supertest": "^6.1.5",
     "ts-jest": "^27.0.4",
     "ts-node": "^10.2.0",
     "typescript": "~4.3.5"
