--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/uuid": "^8.3.1",
     "aws-cdk": "1.118.0",
     "aws-sdk-client-mock": "^0.5.3",
+    "dotenv": "^10.0.0",
     "jest": "^27.0.6",
     "supertest": "^6.1.5",
     "ts-jest": "^27.0.4",
